--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,12 @@
   <title>AngularLearning</title>
   <base href="/">
   <script src="https://use.fontawesome.com/f8902f12ef.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <script type="text/javascript" src="../assets/js/jquery.rotateSlider.js"></script>
 </head>
 <body>
   <app-root></app-root>
